--- a/source/_posts/js-36-构造函数与普通函数区别.md
+++ b/source/_posts/js-36-构造函数与普通函数区别.md
@@ -7,7 +7,7 @@ tags:
 categories:
 - JavaScript
 ---
-1.构造函数也是一个普通函数，创建方式和普通函数一样，但构造函数习惯上首字母大写
+1.构造函数也是一个普通函数，创建方式和普通函数一样，但构造函数习惯首字母大写
 
 2.构造函数和普通函数的区别在于：调用方式不一样。作用也不一样（构造函数用来新建实例对象）
 
