--- a/source/_posts/密钥对、公钥、私钥.md
+++ b/source/_posts/密钥对、公钥、私钥.md
@@ -39,11 +39,11 @@ categories:
 
 所以在实际的应用中，人们通常将两者结合在一起使用，例如，对称密钥加密系统用于存储大量数据信息，而公开密钥加密系统则用于加密密钥。
 
-/*密钥指的是私钥或者公钥—>密钥=私钥/公钥；
+密钥指的是私钥或者公钥—>密钥=私钥/公钥；
 
 密钥对，针对的是非对称加密—>密钥对=私钥+公钥
 
-这样的话，整个思路就清晰了*/
+这样的话，整个思路就清晰了
 
 既然是加密,肯定是不希望别人知道我的消息,所以只要我才能解密 
 所以得出,公钥负责加密,私钥负责解密, 
