--- a/source/_posts/密钥对、公钥、私钥.md
+++ b/source/_posts/密钥对、公钥、私钥.md
@@ -54,7 +54,7 @@ categories:
 
 通常公钥是公开出去的，但是私钥只能自己私密持有。
 
-公钥和私钥唯一对应，用某个公钥签名过得内容只能用对应的私钥才能解签验证；同样用某个私钥加密的内容只能用对应的公钥才能解密。
+公钥和私钥唯一对应，用某个公钥签名过的内容只能用对应的私钥才能解签验证；同样用某个私钥加密的内容只能用对应的公钥才能解密。
 
 总结：公钥和私钥是成对的，它们互相解密（密钥指公钥或私钥，密钥对指公钥加私钥）。
 
