--- a/source/_posts/前端实践记录一.md
+++ b/source/_posts/前端实践记录一.md
@@ -35,7 +35,9 @@ categories:
 #### 2.['1', '2', '3'].map(parseInt)
 
 ```js
-var new_array = arr.map(function callback(currentValue[, index[, array]]) { // Return element for new_array }[, thisArg])
+var new_array = arr.map(function callback(currentValue[, index[, array]]) { 
+  // Return element for new_array 
+  }[, thisArg])
 ```
 
 callback一共可以接收三个参数，其中第一个参数代表当前被处理的元素，而第二个参数代表该元素的索引。
