--- a/source/_posts/前端基础.md
+++ b/source/_posts/前端基础.md
@@ -879,7 +879,8 @@ function bucketSort(arr, bucketSize) {
         // 非递归 用while
         //代码中的判断条件必须是while (left <= right)，
         //否则的话判断条件不完整，比如：array[3] = {1, 3, 5};
-        //待查找的键为5，此时在(low < high)条件下就会找不到，因为low和high相等时，指向元素5，但是此时条件不成立，没有进入while()中
+        //待查找的键为5，此时在(low < high)条件下就会找不到，因为low和high相等时，指向元素5，
+        //但是此时条件不成立，没有进入while()中
 
         function binarySearch2(data, dest) {
             var end = data.length - 1;
