调整文档分组

--- a/source/_posts/前端面试项目.md
+++ b/source/_posts/前端面试项目.md
@@ -3,9 +3,9 @@ title: 前端面试项目
 date: 2020-12-16 11:23:24
 top: true
 tags:
-- WEB
+- 面试
 categories:
-- Web前端
+- 学习笔记
 ---
 
 #### 1.Front-end-Developer-Questions
