--- a/source/_posts/微信扫码登录实现原理.md
+++ b/source/_posts/微信扫码登录实现原理.md
@@ -9,7 +9,7 @@ tags:
 - uuId
 - code
 categories:
-- 微信
+- 微信开发
 ---
 #### 1.生成二维码
 首先，用户打开网站的登录首页的时候，浏览器就会向对应网页服务器发送获取登录二维码的请求，服务器收到请求后，会随机生成一个 uuid，将这个 uuid 作为key值存入redis服务器，同时设置一个过期时间，一旦过期后，用户登录二维码需要进行刷新重新获取。
