--- a/source/_posts/编码规范参考.md
+++ b/source/_posts/编码规范参考.md
@@ -4,7 +4,7 @@ date: 2020-11-13 17:07:27
 tags:
 - 规范
 categories:
-- 编码规范
+- 学习笔记
 ---
 #### 一、腾讯
 [http://tgideas.qq.com/doc/index.html](http://tgideas.qq.com/doc/index.html)
