--- a/source/_posts/负载均衡.md
+++ b/source/_posts/负载均衡.md
@@ -9,7 +9,7 @@ tags:
 - 反向代理
 - 负载均衡
 categories: 
-- 计算机网络
+- 计算机系统与网络
 ---
 #### 一、负载均衡
 负载均衡的目的就是让请求到达不同的服务器上。一次请求到服务器之间，有那么多环节，因此可以实现的方法有很多种，实际应用中不外乎以下几种方式。
