--- a/source/_posts/面试事项.md
+++ b/source/_posts/面试事项.md
@@ -1,11 +1,11 @@
 ---
-title: 面试注意事项
+title: 面试事项
 date: 2020-10-09 09:54:13
 password: alivnLG007
 tags:
 - 面试
 categories:
-- 工作
+- 工作生活
 ---
 ##### 1.工资待遇
 工资组成
