--- a/source/_posts/js-38-并发控制.md
+++ b/source/_posts/js-38-并发控制.md
@@ -10,7 +10,7 @@ categories:
 ### 一、并发控制简介
 
 在日常开发过程中，你可能会遇到并发控制的场景，比如控制请求并发数。那么在 JavaScript 中如何实现并发控制呢？在回答这个问题之前，我们来简单介绍一下并发控制。
-
+<!--more-->
 假设有 6 个待办任务要执行，而我们希望限制同时执行的任务个数，即最多只有 2 个任务能同时执行。当 正在执行任务列表 中的任何 1 个任务完成后，程序会自动从 待办任务列表 中获取新的待办任务并把该任务添加到 正在执行任务列表 中。
 
 为了让大家能够更直观地理解上述的过程，阿宝哥特意画了以下 3 张图：
