--- a/source/_posts/js-39-大文件并行下载.md
+++ b/source/_posts/js-39-大文件并行下载.md
@@ -10,7 +10,7 @@ categories:
 ### 一、思路
 
 大文件上传的解决方案，在上传大文件时，为了提高上传的效率，我们一般会使用 Blob.slice 方法对大文件按照指定的大小进行切割，然后在开启多线程进行分块上传，等所有分块都成功上传后，再通知服务端进行分块合并。
-
+<!--more-->
 那么对大文件下载来说，我们能否采用类似的思想呢？在服务端支持 Range 请求首部的条件下，我们也是可以实现多线程分块下载的功能，具体如下图所示：
 
 ![fileDownload001](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/fileDownload001.jpg)
