--- a/source/_posts/js-50-可选链.md
+++ b/source/_posts/js-50-可选链.md
@@ -10,7 +10,7 @@ categories:
 ### 一、 定义
 
 可选链 ?. 是一种访问嵌套对象属性的安全的方式。即使中间的属性不存在，也不会出现错误。
-
+<!--more-->
 ### 二、“不存在的属性”的问题
 
 举个例子，假设我们有很多个 user 对象，其中存储了我们的用户数据。
