--- a/source/_posts/js-53-实现图片复制功能.md
+++ b/source/_posts/js-53-实现图片复制功能.md
@@ -7,7 +7,7 @@ categories:
 - JavaScript
 ---
 ### 一、前提概要
-
+<!--more-->
 > 剪贴板（英语：clipboard），有时也称剪切板、剪贴簿、剪贴本。它是一种软件功能，通常由操作系统提供，作用是使用复制和粘贴操作短期存储数据和在文档或应用程序间转移数据。它是图形用户界面（GUI）环境中最常用的功能之一，通常实现为匿名、临时的数据缓冲区，可以被环境内的大部分或所有程序使用编程接口访问。 —— 维基百科
 
 剪贴板只能保留一份数据，每当新的数据传入，旧的便会被覆盖。
