--- a/source/_posts/js-55-客户端保存文件.md
+++ b/source/_posts/js-55-客户端保存文件.md
@@ -9,7 +9,7 @@ categories:
 ---
 ### 一、FileSaver 简介
 FileSaver.js 是在客户端保存文件的解决方案，非常适合在客户端上生成文件的 Web 应用程序。它简单易用且兼容大多数浏览器，被作为项目依赖应用在 6.3 万的项目中。
-
+<!--more-->
 FileSaver.js 是 HTML5 的 saveAs() FileSaver 实现。它支持大多数主流的浏览器。
 
 #### 1.1 saveAs API
