--- a/source/_posts/js-56-即时通讯方案.md
+++ b/source/_posts/js-56-即时通讯方案.md
@@ -10,7 +10,7 @@ categories:
 ### 一、即时通讯
 
 即时通讯（Instant Messaging，简称IM）是一个实时通信系统，允许两人或多人使用网络实时的传递文字消息、文件、语音与视频交流。如何来实现呢，通常我们会使用服务器推送技术来实现。常见的有以下几种实现方式。
-
+<!--more-->
 #### 1.1 轮询(polling)
 
 这是一种我们几乎都用到过的的技术实现方案。客户端和服务器之间会一直进行连接，每隔一段时间就询问一次。前端通常采取setInterval或者setTimeout去不断的请求服务器数据。
