--- a/source/_posts/js-57-前端大数据量渲染.md
+++ b/source/_posts/js-57-前端大数据量渲染.md
@@ -9,7 +9,7 @@ categories:
 ### 一、概要
 
 在开始代码之前我们先做好基础准备, 笔者先用nodejs搭建一个数据服务器, 提供基本的数据请求,核心代码如下:
-
+<!--more-->
 ```js
 app.use(async (ctx, next) => {
   if(ctx.url === '/api/getMock') {
