--- a/source/_posts/js-58-文件上传.md
+++ b/source/_posts/js-58-文件上传.md
@@ -9,7 +9,7 @@ categories:
 ### 一、文件上传原理
 
 原理很简单，就是根据 http 协议的规范和定义，完成请求消息体的封装和消息体的解析，然后将二进制内容保存到文件。
-
+<!--more-->
 我们都知道如果要上传一个文件，需要把 form 标签的enctype设置为multipart/form-data,同时method必须为post方法。
 
 那么multipart/form-data表示什么呢？
