--- a/source/_posts/js-10-数据类型检测.md
+++ b/source/_posts/js-10-数据类型检测.md
@@ -10,7 +10,7 @@ categories:
 ### 一、前言
 <!--more-->
 > 基本数据类型: String , Boolean , undefined , null , Number , Symbol , BigInt
-> 引用数据类型: Object，如果要细分的话有 Object、Array、Date、RegExp 和 Function等
+> 引用数据类型: Object，如果要细分的话有 Object、Array、Date、Math、RegExp 和 Function等
 
 ### <span style="color:red">二、typeof</span>
 
