--- a/source/_posts/js-25-事件详解.md
+++ b/source/_posts/js-25-事件详解.md
@@ -45,7 +45,7 @@ btn.addEventListener("click",function(){
 },false)//默认值为false，可不写，false表示冒泡
 ```
 
-<span style="color:red">同样的事件类型，绑定多次，每个都会执行，可以设置时捕获还是冒泡。</span>
+<span style="color:red">同样的事件类型，绑定多次，每个都会执行，可以设置捕获还是冒泡。</span>
 
 #### 1.3 冒泡与捕获
 
