--- a/source/_posts/js-25-事件详解.md
+++ b/source/_posts/js-25-事件详解.md
@@ -59,13 +59,14 @@ btn.addEventListener("click",function(){
 <div class="my">click me</div>
 ```
 
-如果你点击了页面中的<div>元素，那么这个click事件会按照如下顺序传播:
+如果你点击了页面中的```<div>```元素，那么这个click事件会按照如下顺序传播:
 
+```
 1.<div>
 2.<body>
 3.<html>
 4.document
-
+```
 
 ![jssummary010](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/jssummary010.jpg)
 
@@ -75,12 +76,14 @@ btn.addEventListener("click",function(){
 <div class="my">click me</div>
 ```
 
-如果你点击了页面中的<div>元素，那么这个click事件会按照如下顺序传播:
+如果你点击了页面中的```<div>```元素，那么这个click事件会按照如下顺序传播:
 
+```
 1.document
 2.<html>
 3.<body>
 4.<div>
+```
 
 ![jssummary011](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/jssummary011.jpg)
 
