--- a/source/_posts/js-26-数组去重方式.md
+++ b/source/_posts/js-26-数组去重方式.md
@@ -50,7 +50,7 @@ function unique(arr) {
     if (!Array.isArray(arr)) return;
     var result = [];
     for (var i = 0; i < arr.length; i++) {
-        if (array.indexOf(arr[i]) === -1) {
+        if (arr.indexOf(arr[i]) === -1) {
             result.push(arr[i])
         }
     }
