--- a/source/_posts/js-28-高阶函数.md
+++ b/source/_posts/js-28-高阶函数.md
@@ -160,7 +160,11 @@ curried(1, 2, 3); // => [1, 2, 3]
 
 ```js
 _.curry(func, [arity=func.length])
-// 创建一个函数，该函数接收 func 的参数，要么调用func返回的结果，如果 func 所需参数已经提供，则直接返回 func 所执行的结果。或返回一个函数，接受余下的func 参数的函数，可以使用 func.length 设置需要累积的参数个数。
+/* 
+创建一个函数，该函数接收 func 的参数，要么调用func返回的结果，
+如果 func 所需参数已经提供，则直接返回 func 所执行的结果。
+或返回一个函数，接受余下的func 参数的函数，可以使用 func.length 设置需要累积的参数个数。
+*/
 ```
 
 这里需要特别注意的是，在数学和理论计算机科学中的柯里化函数，一次只能传递一个参数。而对于 JavaScript 语言来说，在实际应用中的柯里化函数，可以传递一个或多个参数。好的，介绍完柯里化的相关知识，接下来我们来介绍柯里化的作用。
